@@ -1053,6 +1053,9 @@ Text Search
 #search_external_txt
 External JSON Query
 
+#search_keyword_txt
+Keyword Search
+
 #search_aid_type_txt
 Default Aid Type
 
