@@ -1022,6 +1022,9 @@ Recherche texte
 #search_external_txt
 Requête JSON Externe
 
+#search_keyword_txt
+Mot-clé
+
 #search_aid_type_txt
 Type d'aide par défaut
 
