@@ -290,6 +290,11 @@
 	</table>
 </div>
 
+#search_display_keyword trim=ends
+	<div class="search_query">
+		<div class="status_code"><a href="{search_text}">{search_text}</a></div><span>{search_keyword_txt}</span>
+	</div>
+	
 #search_display_aids trim=ends
 	<div class="search_query">
 		<div class="status_code"><a href="{search_text}">{search_text}</a></div><span>{search_external_txt}</span>
