@@ -1019,6 +1019,9 @@ EXPLORE <span>फिल्टर</span>
 #search_external_txt
 बाहरी JSON क्वेरी
 
+#search_keyword_txt
+कीवर्ड
+
 #search_aid_type_txt
 डिफ़ॉल्ट सहायता प्रकार
 
