@@ -1022,6 +1022,9 @@ EXPLORE <span>フィルタ</span>
 #search_external_txt
 外部JSONクエリ
 
+#search_keyword_txt
+キーワード
+
 #search_aid_type_txt
 デフォルトの援助タイプ
 
