@@ -1019,6 +1019,9 @@ Búsqueda de texto
 #search_external_txt
 Consulta JSON externa
 
+#search_keyword_txt
+Palabra clave
+
 #search_aid_type_txt
 Tipo de ayuda predeterminado
 
