@@ -3,6 +3,8 @@ Development Portal (2020-04-12 shi)
 Update glossary for search
 Add trending search buttons
 Update css
+Add keyword search to filters
+Update all translations
 
 
 Development Portal (2020-04-11 shi)
